--- a/zadanie_albumy.ipynb
+++ b/zadanie_albumy.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "b87c14e8-2f78-45fc-85c3-3995b5d4d21e",
    "metadata": {},
    "outputs": [
@@ -27,129 +27,17 @@
      "output_type": "stream",
      "text": [
       "Tabela 'The best-selling albums of all time on the Official Chart'\n",
-      "    POS                                   TITLE                    ARTIST  \\\n",
-      "0     1                           GREATEST HITS                     QUEEN   \n",
-      "1     2                    GOLD - GREATEST HITS                      ABBA   \n",
-      "2     3    SGT PEPPER'S LONELY HEARTS CLUB BAND                   BEATLES   \n",
-      "3     4                                      21                     ADELE   \n",
-      "4     5          WHAT'S THE STORY MORNING GLORY                     OASIS   \n",
-      "5     6                                THRILLER           MICHAEL JACKSON   \n",
-      "6     7               THE DARK SIDE OF THE MOON                PINK FLOYD   \n",
-      "7     8                        BROTHERS IN ARMS              DIRE STRAITS   \n",
-      "8     9                                     BAD           MICHAEL JACKSON   \n",
-      "9    10                        GREATEST HITS II                     QUEEN   \n",
-      "10   11                                 RUMOURS             FLEETWOOD MAC   \n",
-      "11   12               THE IMMACULATE COLLECTION                   MADONNA   \n",
-      "12   13                           BACK TO BLACK             AMY WINEHOUSE   \n",
-      "13   14                                   STARS                SIMPLY RED   \n",
-      "14   15                            COME ON OVER              SHANIA TWAIN   \n",
-      "15   16                                  LEGEND  BOB MARLEY & THE WAILERS   \n",
-      "16   17                          BACK TO BEDLAM               JAMES BLUNT   \n",
-      "17   18                             URBAN HYMNS                     VERVE   \n",
-      "18   19                         BAT OUT OF HELL                 MEAT LOAF   \n",
-      "19   20                                       1                   BEATLES   \n",
-      "20   21              BRIDGE OVER TROUBLED WATER         SIMON & GARFUNKEL   \n",
-      "21   22                           DIRTY DANCING       ORIGINAL SOUNDTRACK   \n",
-      "22   23                                  SPIRIT               LEONA LEWIS   \n",
-      "23   24                              CRAZY LOVE             MICHAEL BUBLE   \n",
-      "24   25                                NO ANGEL                      DIDO   \n",
-      "25   26                            WHITE LADDER                DAVID GRAY   \n",
-      "26   27                                      25                     ADELE   \n",
-      "27   28                         TALK ON CORNERS                     CORRS   \n",
-      "28   29                                   SPICE               SPICE GIRLS   \n",
-      "29   30                                THE FAME                 LADY GAGA   \n",
-      "30   31             A RUSH OF BLOOD TO THE HEAD                  COLDPLAY   \n",
-      "31   32                           LIFE FOR RENT                      DIDO   \n",
-      "32   33                       ONLY BY THE NIGHT             KINGS OF LEON   \n",
-      "33   34                         BEAUTIFUL WORLD                 TAKE THAT   \n",
-      "34   35                         HOPES AND FEARS                     KEANE   \n",
-      "35   36                         THE JOSHUA TREE                        U2   \n",
-      "36   37                   THE WAR OF THE WORLDS                JEFF WAYNE   \n",
-      "37   38                         SCISSOR SISTERS           SCISSOR SISTERS   \n",
-      "38   39                           BUT SERIOUSLY              PHIL COLLINS   \n",
-      "39   40                                     X&Y                  COLDPLAY   \n",
-      "40   41                      JAGGED LITTLE PILL         ALANIS MORISSETTE   \n",
-      "41   42                           TUBULAR BELLS             MIKE OLDFIELD   \n",
-      "42   43                             THE MAN WHO                    TRAVIS   \n",
-      "43   44                           TRACY CHAPMAN             TRACY CHAPMAN   \n",
-      "44   45                              PARACHUTES                  COLDPLAY   \n",
-      "45   46                           GREATEST HITS                      ABBA   \n",
-      "46   47                                  GREASE       ORIGINAL SOUNDTRACK   \n",
-      "47   48                 I'VE BEEN EXPECTING YOU           ROBBIE WILLIAMS   \n",
-      "48   49                                       X                ED SHEERAN   \n",
-      "49   50                       COME AWAY WITH ME               NORAH JONES   \n",
-      "50   51                               GRACELAND                PAUL SIMON   \n",
-      "51   52                      THE SOUND OF MUSIC   ORIGINAL CAST RECORDING   \n",
-      "52   53        LADIES & GENTLEMEN - THE BEST OF            GEORGE MICHAEL   \n",
-      "53   54                      TANGO IN THE NIGHT             FLEETWOOD MAC   \n",
-      "54   55                 THE MARSHALL MATHERS LP                    EMINEM   \n",
-      "55   56               SWING WHEN YOU'RE WINNING           ROBBIE WILLIAMS   \n",
-      "56   57                                PROGRESS                 TAKE THAT   \n",
-      "57   58                               EYES OPEN               SNOW PATROL   \n",
-      "58   59  NEVER FORGET - THE ULTIMATE COLLECTION                 TAKE THAT   \n",
-      "59   60                AUTOMATIC FOR THE PEOPLE                       REM   \n",
-      "\n",
-      "    YEAR  HIGH POSN  \n",
-      "0   1981          1  \n",
-      "1   1992          1  \n",
-      "2   1967          1  \n",
-      "3   2011          1  \n",
-      "4   1995          1  \n",
-      "5   1982          1  \n",
-      "6   1973          2  \n",
-      "7   1985          1  \n",
-      "8   1987          1  \n",
-      "9   1991          1  \n",
-      "10  1977          1  \n",
-      "11  1990          1  \n",
-      "12  2006          1  \n",
-      "13  1991          1  \n",
-      "14  1997          1  \n",
-      "15  1984          1  \n",
-      "16  2004          1  \n",
-      "17  1997          1  \n",
-      "18  1977          9  \n",
-      "19  2000          1  \n",
-      "20  1970          1  \n",
-      "21  1987          4  \n",
-      "22  2007          1  \n",
-      "23  2009          1  \n",
-      "24  2000          1  \n",
-      "25  1998          1  \n",
-      "26  2015          1  \n",
-      "27  1997          1  \n",
-      "28  1996          1  \n",
-      "29  2008          1  \n",
-      "30  2002          1  \n",
-      "31  2003          1  \n",
-      "32  2008          1  \n",
-      "33  2006          1  \n",
-      "34  2004          1  \n",
-      "35  1987          1  \n",
-      "36  1978          5  \n",
-      "37  2004          1  \n",
-      "38  1989          1  \n",
-      "39  2005          1  \n",
-      "40  1995          1  \n",
-      "41  1973          1  \n",
-      "42  1999          1  \n",
-      "43  1988          1  \n",
-      "44  2000          1  \n",
-      "45  1975          1  \n",
-      "46  1977          1  \n",
-      "47  1998          1  \n",
-      "48  2014          1  \n",
-      "49  2002          1  \n",
-      "50  1986          1  \n",
-      "51  1965          1  \n",
-      "52  1998          1  \n",
-      "53  1987          1  \n",
-      "54  2000          1  \n",
-      "55  2001          1  \n",
-      "56  2010          1  \n",
-      "57  2006          1  \n",
-      "58  2005          2  \n",
-      "59  1992          1  \n"
+      "   POS                                 TITLE           ARTIST  YEAR  HIGH POSN\n",
+      "0    1                         GREATEST HITS            QUEEN  1981          1\n",
+      "1    2                  GOLD - GREATEST HITS             ABBA  1992          1\n",
+      "2    3  SGT PEPPER'S LONELY HEARTS CLUB BAND          BEATLES  1967          1\n",
+      "3    4                                    21            ADELE  2011          1\n",
+      "4    5        WHAT'S THE STORY MORNING GLORY            OASIS  1995          1\n",
+      "5    6                              THRILLER  MICHAEL JACKSON  1982          1\n",
+      "6    7             THE DARK SIDE OF THE MOON       PINK FLOYD  1973          2\n",
+      "7    8                      BROTHERS IN ARMS     DIRE STRAITS  1985          1\n",
+      "8    9                                   BAD  MICHAEL JACKSON  1987          1\n",
+      "9   10                      GREATEST HITS II            QUEEN  1991          1\n"
      ]
     }
    ],
@@ -164,7 +52,7 @@
     "    if 'TITLE' in tabela.columns:\n",
     "        df = tabela\n",
     "        print(\"Tabela 'The best-selling albums of all time on the Official Chart'\")\n",
-    "        print(df)\n",
+    "        print(df.head(10))\n",
     "        break"
    ]
   },
