Analiza pracowników - wiek

--- a/Ocena_pracownika.ipynb
+++ b/Ocena_pracownika.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": null,
    "id": "e6dcd394-9d07-47c7-9c65-ca422de585ce",
    "metadata": {},
    "outputs": [
@@ -594,8 +594,13 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('HRDataset.csv')\n",
-    "df.head(10)"
+    "import pandas as pd\n",
+    "\n",
+    "url = 'https://raw.githubusercontent.com/konradp-86/kurs/main/HRDataset.csv'\n",
+    "\n",
+    "df = pd.read_csv(url)\n",
+    "\n",
+    "print(df.head())"
    ]
   },
   {
